crates/pardosa-schema/tests/compile_fail/evt_001.stderr
error: EVT-001: GenomeSafe cannot be derived for unions
 --> tests/compile_fail/evt_001.rs:3:7
  |
3 | union BadUnion {
  |       ^^^^^^^^
